--- a/UIs/nLine.ui
+++ b/UIs/nLine.ui
@@ -474,6 +474,9 @@
    <property name="windowTitle">
     <string>toolBar</string>
    </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
    <property name="iconSize">
     <size>
      <width>16</width>
