--- a/UIs/nRotate.ui
+++ b/UIs/nRotate.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>171</width>
+    <width>198</width>
     <height>168</height>
    </rect>
   </property>
@@ -36,30 +36,6 @@
     <property name="bottomMargin">
      <number>4</number>
     </property>
-    <item row="5" column="0">
-     <widget class="QPushButton" name="doIt">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Keep a copy</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QComboBox" name="image">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="neutrinoImage" stdset="0">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
     <item row="4" column="0">
      <widget class="QGroupBox" name="groupBox_2">
       <property name="font">
@@ -145,6 +121,30 @@
       </layout>
      </widget>
     </item>
+    <item row="3" column="0">
+     <widget class="QComboBox" name="image">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="neutrinoImage" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="QPushButton" name="doIt">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Keep a copy</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar">
@@ -155,8 +155,6 @@
    </property>
   </widget>
  </widget>
- <resources>
-  <include location="../resources/neutrino.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
