--- a/UIs/nHDF5.ui
+++ b/UIs/nHDF5.ui
@@ -18,7 +18,16 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <property name="margin">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
      <number>0</number>
     </property>
     <item row="0" column="0">
@@ -89,11 +98,17 @@
    <property name="windowTitle">
     <string>toolBar</string>
    </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
    <property name="iconSize">
     <size>
      <width>20</width>
      <height>20</height>
     </size>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -108,8 +123,8 @@
   </widget>
   <action name="actionOpen">
    <property name="icon">
-    <iconset resource="../resources/neutrino.qrc">
-     <normaloff>:icons//plus.png</normaloff>:icons/plus</iconset>
+    <iconset>
+     <normaloff>:icons//plus.png</normaloff>:icons//plus.png</iconset>
    </property>
    <property name="text">
     <string>Open</string>
@@ -117,8 +132,8 @@
   </action>
   <action name="actionClose">
    <property name="icon">
-    <iconset resource="../resources/neutrino.qrc">
-     <normaloff>:icons//remove.png</normaloff>:icons/remove</iconset>
+    <iconset>
+     <normaloff>:icons//remove.png</normaloff>:icons//remove.png</iconset>
    </property>
    <property name="text">
     <string>Close</string>
@@ -126,8 +141,8 @@
   </action>
   <action name="actionCopy">
    <property name="icon">
-    <iconset resource="../resources/neutrino.qrc">
-     <normaloff>:icons//saveClipboard.png</normaloff>:icons/saveClipboard</iconset>
+    <iconset>
+     <normaloff>:icons//saveClipboard.png</normaloff>:icons//saveClipboard.png</iconset>
    </property>
    <property name="text">
     <string>Copy</string>
@@ -137,8 +152,6 @@
    </property>
   </action>
  </widget>
- <resources>
-  <include location="../resources/neutrino.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
