--- a/UIs/nInterferometry.ui
+++ b/UIs/nInterferometry.ui
@@ -232,7 +232,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
+          <iconset resource="../resources/icons/icons.qrc">
            <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
          </property>
         </widget>
@@ -331,7 +331,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
+          <iconset resource="../resources/icons/icons.qrc">
            <normaloff>:/icons/line.png</normaloff>:/icons/line.png</iconset>
          </property>
         </widget>
@@ -347,7 +347,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
+          <iconset resource="../resources/icons/icons.qrc">
            <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
          </property>
         </widget>
@@ -417,7 +417,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
+          <iconset resource="../resources/icons/icons.qrc">
            <normaloff>:/icons/center.png</normaloff>:/icons/center.png</iconset>
          </property>
          <property name="checkable">
@@ -488,7 +488,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
+          <iconset resource="../resources/icons/icons.qrc">
            <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
          </property>
         </widget>
@@ -527,7 +527,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
+          <iconset resource="../resources/icons/icons.qrc">
            <normaloff>:/icons/line.png</normaloff>:/icons/line.png</iconset>
          </property>
          <property name="checkable">
@@ -591,7 +591,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
+          <iconset resource="../resources/icons/icons.qrc">
            <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
          </property>
         </widget>
@@ -651,7 +651,7 @@
           <string>+</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
+          <iconset resource="../resources/icons/icons.qrc">
            <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
          </property>
         </widget>
@@ -670,7 +670,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
+          <iconset resource="../resources/icons/icons.qrc">
            <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
          </property>
         </widget>
@@ -765,7 +765,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources/neutrino.qrc">
+          <iconset resource="../resources/icons/icons.qrc">
            <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
          </property>
         </widget>
@@ -913,7 +913,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../resources/neutrino.qrc">
+    <iconset resource="../resources/icons/icons.qrc">
      <normaloff>:/icons/autoRefresh.png</normaloff>
      <normalon>:/icons/noAutoRefresh.png</normalon>:/icons/autoRefresh.png</iconset>
    </property>
@@ -926,7 +926,7 @@
   </action>
   <action name="actionDoWavelet">
    <property name="icon">
-    <iconset resource="../resources/neutrino.qrc">
+    <iconset resource="../resources/icons/icons.qrc">
      <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
    </property>
    <property name="text">
@@ -938,7 +938,7 @@
   </action>
   <action name="actionTrash">
    <property name="icon">
-    <iconset resource="../resources/neutrino.qrc">
+    <iconset resource="../resources/icons/icons.qrc">
      <normaloff>:/icons/trash.png</normaloff>:/icons/trash.png</iconset>
    </property>
    <property name="text">
@@ -950,7 +950,7 @@
   </action>
   <action name="actionDuplicate">
    <property name="icon">
-    <iconset resource="../resources/neutrino.qrc">
+    <iconset resource="../resources/icons/icons.qrc">
      <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
    </property>
    <property name="text">
@@ -983,7 +983,7 @@
   <tabstop>doMaskCutoff</tabstop>
  </tabstops>
  <resources>
-  <include location="../resources/neutrino.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
