--- a/UIs/nInterferometry1.ui
+++ b/UIs/nInterferometry1.ui
@@ -218,7 +218,7 @@
          <string>...</string>
         </property>
         <property name="icon">
-         <iconset resource="../resources/neutrino.qrc">
+         <iconset resource="../resources/icons/icons.qrc">
           <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
         </property>
        </widget>
@@ -238,7 +238,7 @@
   <tabstop>numAngle</tabstop>
  </tabstops>
  <resources>
-  <include location="../resources/neutrino.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
