--- a/UIs/nLineoutBoth.ui
+++ b/UIs/nLineoutBoth.ui
@@ -45,7 +45,7 @@
        <string>...</string>
       </property>
       <property name="icon">
-       <iconset resource="../resources/neutrino.qrc">
+       <iconset resource="../resources/icons/icons.qrc">
         <normaloff>:/icons/lockColor.png</normaloff>:/icons/lockColor.png</iconset>
       </property>
       <property name="iconSize">
@@ -68,7 +68,7 @@
        <string>...</string>
       </property>
       <property name="icon">
-       <iconset resource="../resources/neutrino.qrc">
+       <iconset resource="../resources/icons/icons.qrc">
         <normaloff>:/icons/lockOpen.png</normaloff>
         <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
       </property>
@@ -102,7 +102,7 @@
        <string>...</string>
       </property>
       <property name="icon">
-       <iconset resource="../resources/neutrino.qrc">
+       <iconset resource="../resources/icons/icons.qrc">
         <normaloff>:/icons/autoRefresh.png</normaloff>
         <normalon>:/icons/noAutoRefresh.png</normalon>:/icons/autoRefresh.png</iconset>
       </property>
@@ -136,7 +136,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../resources/neutrino.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
