--- a/UIs/nRegionPath.ui
+++ b/UIs/nRegionPath.ui
@@ -160,6 +160,9 @@
    <property name="windowTitle">
     <string>toolBar</string>
    </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
    <property name="iconSize">
     <size>
      <width>20</width>
